// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dag-jose-utils Encodes and decodes identity CIDs 1`] = `
Object {
  "codec": "dag-cbor",
  "hash": Uint8Array [
    0,
    7,
    161,
    99,
    97,
    98,
    99,
    24,
    123,
  ],
  "version": 1,
}
`;

exports[`dag-jose-utils Encodes and decodes identity CIDs 2`] = `
Object {
  "codec": "dag-cbor",
  "hash": Uint8Array [
    0,
    22,
    161,
    101,
    97,
    76,
    105,
    110,
    107,
    216,
    42,
    76,
    0,
    1,
    113,
    0,
    7,
    161,
    99,
    97,
    98,
    99,
    24,
    123,
  ],
  "version": 1,
}
`;

exports[`dag-jose-utils Prepare and decode cleartext 1`] = `
Uint8Array [
  1,
  113,
  0,
  7,
  161,
  99,
  97,
  98,
  99,
  24,
  123,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`dag-jose-utils Prepare and decode cleartext 2`] = `
Uint8Array [
  1,
  113,
  0,
  33,
  161,
  101,
  97,
  76,
  105,
  110,
  107,
  88,
  24,
  1,
  113,
  0,
  7,
  161,
  99,
  97,
  98,
  99,
  24,
  123,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`dag-jose-utils Properly encode payload 1`] = `
Object {
  "cid": Object {
    "codec": "dag-cbor",
    "hash": Uint8Array [
      18,
      32,
      62,
      231,
      147,
      209,
      63,
      207,
      7,
      204,
      121,
      70,
      28,
      81,
      63,
      219,
      19,
      21,
      11,
      57,
      9,
      225,
      136,
      89,
      176,
      179,
      28,
      77,
      95,
      227,
      241,
      26,
      49,
      202,
    ],
    "version": 1,
  },
  "linkedBlock": Uint8Array [
    161,
    99,
    97,
    98,
    99,
    24,
    123,
  ],
}
`;

exports[`dag-jose-utils Properly encode payload 2`] = `
Object {
  "cid": Object {
    "codec": "dag-cbor",
    "hash": Uint8Array [
      18,
      32,
      95,
      2,
      189,
      189,
      162,
      177,
      207,
      186,
      234,
      10,
      197,
      153,
      107,
      7,
      16,
      34,
      110,
      198,
      34,
      29,
      95,
      36,
      156,
      70,
      152,
      200,
      156,
      238,
      157,
      204,
      50,
      32,
    ],
    "version": 1,
  },
  "linkedBlock": Uint8Array [
    161,
    101,
    97,
    76,
    105,
    110,
    107,
    216,
    42,
    88,
    37,
    0,
    1,
    113,
    18,
    32,
    62,
    231,
    147,
    209,
    63,
    207,
    7,
    204,
    121,
    70,
    28,
    81,
    63,
    219,
    19,
    21,
    11,
    57,
    9,
    225,
    136,
    89,
    176,
    179,
    28,
    77,
    95,
    227,
    241,
    26,
    49,
    202,
  ],
}
`;
